src/test/error/import.lns
import test.error.imp1;
